syntax = "proto3";

package Schema;

enum GenerationMode {
    AutoAccrue = 0;
    Word = 1;
}

message GameSettings {
    GenerationMode generation_mode = 1;
    string map = 2;
}

message SearchForGame
{
    bool ranked = 1;
}

message GameAvailableOnPort
{
    string game_id = 1;
    string player_id = 2;
    string port = 3;
}

message GameFoundForPlayer
{
    string game_id = 1;
    string player_id = 2;
    string auth_token = 3;
    string address = 4;
}

message PlacePlayerInGame
{
    string player_id = 1;
}

message Registered
{
    string port = 1;
}

message Register
{
    string port = 1;
}


message Oneof_PlayerToMatchmaker {
    string player_id = 1;
    oneof msg {
        SearchForGame search_for_game = 2;
    }
}

message Oneof_MatchMakerToPlayer {
    oneof msg {
        GameFoundForPlayer found_game = 1;
    }
}

message Oneof_HostServerToMatchmaker {
    oneof msg {
        GameAvailableOnPort game_available_on_port = 1;
        Register register = 2;
    }
}

message Oneof_MatchmakerToHostServer {
    oneof msg {
        PlacePlayerInGame place_player_in_game = 2;
        Registered registered = 3;
    }
}

message Oneof_HostServerToGameServer {
    oneof msg {
        Register register = 1;
    }
}

// #####################
// ###### In game ######
// #####################

message Oneof_PlayerToGameServer {
    string sender_id = 1;
    string auth_token = 2;
    oneof msg {
         IssueDeploymentOrder issue_deployment_order = 3;
    }
}

message Oneof_GameServerToPlayer {
    string recipient_id = 1;
    oneof msg {
        InitialState initial_state = 2;
        AllSoldierPositions all_soldier_positions = 3;
    }
}

enum TileType
{
    Invalid = 0;
    Land = 1;
    Water = 2;
    Tree = 3;
}

message V2 {
    float x = 1;
    float y = 2;
}

message V2Int {
    int32 x = 1;
    int32 y = 2;
}

enum SoldierType {
    InvalidSoldier = 0;
    Warrior = 1;
    Archer = 2;
}

message AllSoldierPositions {
    repeated SoldierPosition soldier_positions = 1;
}

message SoldierPosition {
    uint32 id = 1;
    V2 pos = 2;
    V2 velocity = 3;
}

message KeepState {
    uint32 id = 1;
    V2 pos = 2;
    int32 warrior_count = 3;
    int32 archer_count = 4;
    string name = 5;
    int32 alliance = 6;
}

message InitialState {
    repeated KeepState keeps = 1;
    int32 map_width = 2;
    int32 map_height = 3;
    repeated TileType tiles = 4;
}

message IssueDeploymentOrder {
    uint32 source_keep = 1;
    uint32 target_keep = 2;
    SoldierType soldier_type = 3;
    float percent = 4;
}
